--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-.a {
-  height: 20px;
-  width: 80%;
-  background-color: aqua;
-  position: absolute;
-  top: 20px;
+.text-justify {
+  text-align: justify;
+}
+
+.letter-spacing {
+  letter-spacing: 0.475rem;
+}
+
+.img-fluid-400 {
+  max-width: 100%;
+  max-height: 500px;
+}
+
+.img-fluid-300 {
+  max-width: 100%;
+  max-height: 300px;
 }
