--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   max-height: 500px;
 }
 
+.img-fluid-350 {
+  max-width: 100%;
+  max-height: 350px;
+}
+
 .img-fluid-300 {
   max-width: 100%;
   max-height: 300px;
